--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-0">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">PlayPal</a>
     <button class="navbar-toggler btn-outline-success" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
