--- a/templates/user/swiping.html
+++ b/templates/user/swiping.html
@@ -209,8 +209,13 @@
 
                     <!-- User Card -->
                     <div class="col-lg-4 col-md-6 col-sm-12 offset-md-0 offset-sm-1">
-                        <div class="card shadow" data-user-id="{{ user.uuid }}"><img class="card-img-top"
-                                                                                     src="{% static 'images/card_bg/basic_blue_card.png' %}">
+                        <div class="card shadow" data-user-id="{{ user.uuid }}">
+
+                            {% if user in liked_users %}
+                                <img class="card-img-top" src="{% static 'images/card_bg/liked.png' %}">
+                            {% else %}
+                                <img class="card-img-top" src="{% static 'images/card_bg/basic_blue_card.png' %}">
+                            {% endif %}
 
                             <div class="bg-light">
                                 <div class="card-body">
