--- a/templates/user/swiping.html
+++ b/templates/user/swiping.html
@@ -20,7 +20,6 @@
 <!-- Dynamic var for js changing liked card-->
 <script>
     var dynamicImageUrl = '{% static 'images/card_bg/liked.png' %}';
-
 </script>
 
 
@@ -29,7 +28,7 @@
         <div class="h3">Find a PlayPal</div>
     </div>
 
-    <div class="content py-md-0 py-3"> <!-- Web section-->
+    <div class="content py-md-0 py-3">
         <section id="sidebar">
             <div class="py-3">
                 <h5 class="font-weight-bold">Filter by</h5>
@@ -46,7 +45,6 @@
                         <br>
                         <input id="parent-min-age" name="parent-min-age" class="multi-range" type="range" min="18"
                                max="70" value="18">
-
                     </div>
 
                     <!-- Parent's maximum age -->
@@ -56,7 +54,6 @@
                         <br>
                         <input id="parent-max-age" name="parent-max-age" class="multi-range" type="range" min="18"
                                max="70" value="18">
-
                     </div>
 
                     <!-- Child's minimum age -->
@@ -81,7 +78,6 @@
 
                     <!-- Interests -->
                     <h6 class="font-weight-bold mt-2">Popular interests</h6>
-
                     <div class="my-2 pb-2">
                         {% for interest in interestlist|slice:':5' %}
                         <div class="form-inline d-flex align-items-center py-2">
@@ -162,11 +158,9 @@
                     <!-- Submit button -->
                     <button type="submit" class="btn btn-primary btn mt-3">Find Matches</button>
                 </form>
-
         </section>
+
         <!-- User Profiles Section -->
-
-
         <section id="products">
             <div class="container py-3">
                 <div class="row">
@@ -193,7 +187,7 @@
                                         <h6 class="font-weight-bold pt-1 ">{{user.first_name}}</h6>
                                         <!-- Location -->
 
-                                        <div class="d-flex align-items-center ml-5 ">
+                                        <div class="d-flex align-items-center ml-2 ">
                                             <img src="{% static 'images/icons8-location-48.png' %}"
                                                  class="float-left rounded-circle location">
                                             <div class="font-weight-bold pt-1 h8-style ">{{user.location}}</div>
@@ -209,14 +203,12 @@
 
                             <div class="card-body">
 
-                                <div class="d-flex align-items-center ml-5">
+                                <div class="d-flex align-items-center">
                                     <div class="font-weight-bold pt-1 h9-style ">My Children</div>
-                                    <img src="{% static 'images/children_pic.png' %}" class="float-left children">
-
+                                    <img src="{% static 'images/children_pic.png' %}" class="ml-3 children" alt="Children Picture">
                                 </div>
 
                                 {% with child=user_info.matching_children %}
-
 
                                 <div class="font-weight-bold pt-1 h7-style ">{{child.first_name|default:'Kiddo'}}</div>
                                 <div class="text-muted description">{{child.bio|default:'This is bio'}}
@@ -287,9 +279,7 @@
 
 {% endblock content %}
 
-
 {% block javascript %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="{% static 'js/swiping.js' %}"></script>
-
 {% endblock javascript %}
