--- a/templates/marketplace/home.html
+++ b/templates/marketplace/home.html
@@ -79,7 +79,7 @@
                         <h4 class="mb-3">Join PlayPal today!</h4>
                         <p class="mb-4">Embark on a journey of connection, laughter, and shared experiences. Sign up for Playpal today and let the adventures begin!
                         Ready to make parenting even more delightful? Join Playpal now!</p>
-                        <a class="btn btn-outline-success px-3" href="#">
+                        <a class="btn btn-outline-success px-3" href="{% url 'user_registration'%}">
                             Register
                             <div class="d-inline-flex btn-sm-square bg-success text-white rounded-circle ms-2">
                                 <i class="fa fa-arrow-right"></i>
